--- a/ckanext/cioos_theme/public/header.html
+++ b/ckanext/cioos_theme/public/header.html
@@ -8,7 +8,7 @@ body,button,input,select,textarea{color:#3d3d3d;word-wrap:break-word;font:14px/1
 		<div id="header-links" class="main-navigation">
 			<div id="header-links-inner" class="header-links">
 				<ul id="menu-main-menu-en" class="menu">
-					<li id="menu-item-921" class="menu-item  menu-item-home current-menu-item current_page_item"><a href="https://cioospacific.ca/"><span>HOME</span></a></li>
+					<li id="menu-item-921" class="menu-item  menu-item-home"><a href="https://cioospacific.ca/"><span>HOME</span></a></li>
 					<li id="menu-item-920" class="menu-item  menu-item-has-children menu-parent"><a href="https://cioospacific.ca/about/"><span>ABOUT</span></a>
 						<ul class="sub-menu" style=" min-width: 94px;">
 							<li id="menu-item-1872" class="menu-item "><a href="https://cioospacific.ca/about/data-management/">Data Management</a></li>
@@ -25,7 +25,7 @@ body,button,input,select,textarea{color:#3d3d3d;word-wrap:break-word;font:14px/1
 						</ul>
 					</li>
 					<li id="menu-item-1359" class="menu-item "><a href="https://cioospacific.ca/data-tools/"><span>DATA TOOLS</span></a></li>
-					<li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent"><a href="/ckan/"><span>DATA CATALOGUE</span></a>
+					<li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="/ckan/"><span>DATA CATALOGUE</span></a>
 						<ul class="sub-menu" style=" min-width: 161px;">
 							<li id="menu-item-1999" class="menu-item"><a href="https://catalogue.cioospacific.ca/dataset">Data Sets</a></li>
 							<li id="menu-item-2000" class="menu-item"><a href="https://catalogue.cioospacific.ca/group">Groups</a></li>
